@@ -3691,7 +3691,9 @@ Example code to pause and save resume data for all torrents and wait for the ale
 		}
 		
 		torrent_handle h = rd->handle;
-		std::ofstream out((h.status().save_path + "/" + h.torrent_file()->name() + ".fastresume").c_str()
+		torrent_status st = h.status(torrent_handle::query_save_path | torrent_handle::query_name);
+		std::ofstream out((st.save_path
+			+ "/" + st.name + ".fastresume").c_str()
 			, std::ios_base::binary);
 		out.unsetf(std::ios_base::skipws);
 		bencode(std::ostream_iterator<char>(out), *rd->resume_data);
